Build and release for all supported boards
Signed-off-by: David Gräff <david.graeff@web.de>

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 # Credentials
 docker_credentials.inc
-github_credentials.inc
+github_token.inc
 
 # Temporary directories
-image_root*
-*_mount
-voidlinux
+voidlinux/
+releases/
 
 # Dont't commit image files
 *.zip
